load more button resolved, footer-right part gap increased

--- a/styles/components/_collegeBlock.scss
+++ b/styles/components/_collegeBlock.scss
@@ -73,5 +73,8 @@
     display: flex;
     justify-content: center;
     margin-top: 40px;
+    .cta-button{
+      border: 0;
+    }
   }
 }
