--- a/styles/layouts/_footer.scss
+++ b/styles/layouts/_footer.scss
@@ -31,7 +31,9 @@
     display: flex;
     padding-top: 30px;
     flex: 3;
-    padding-left: 20px;    
+    padding-left: 20px;
+    gap: 30px;
+    justify-content: space-between;    
     @media (max-width: 414px) {
       margin-top: 25px;
     }
